--- a/Classfication-Model-Fire:Non-Fire/requirements.txt
+++ b/Classfication-Model-Fire:Non-Fire/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-opencv-python
-tensorflow
-scikit-learn
-matplotlib
-seaborn
+numpy==1.24.3
+opencv-python==4.8.0.76
+tensorflow==2.13.0
+scikit-learn==1.3.0
+matplotlib==3.7.1
+seaborn==0.12.2
